some web app stuff

--- a/Methodology/Footprinting/389, 636, 3268, 3269 LDAP.md
+++ b/Methodology/Footprinting/389, 636, 3268, 3269 LDAP.md
@@ -1,11 +1,14 @@
 Do these steps for both LDAP/LDAPS (389, 636) AND (3268, 3269)
 
+Initial Enumeration (no creds)
 ```bash
-# Step 1
 ldapsearch -x -H ldap://<IP>:<port> # try on both ldap and ldaps, this is first command to run if you dont have any valid credentials.
+```
+if this returns info, you can also use `nxc ldap` -- see [[Netexec]]
 
-For the next steps, the -b info can be obtained when you kerberoast services :)
-
+Enumeration with creds
+```bash
+#For the next steps, the -b info can be obtained when you kerberoast services :)
 #Step 2 (if necessary)
 ldapsearch -x -H ldap://<IP> -D '' -w '' -b "DC=<1_SUBDOMAIN>,DC=<TLD>"
 
