some more webapp stuff

--- a/Methodology/Footprinting/445 SMB.md
+++ b/Methodology/Footprinting/445 SMB.md
@@ -1,3 +1,7 @@
+```bash
+# dump all readable files
+nxc smb <ip> -u '<user>' -p '<pass>' -M spider_plus -o DOWNLOAD_FLAG=TRUE
+```
 ## Password Spraying
 use [[Netexec]] to determine if any creds you have are valid
 
